--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.23.0",
     "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -16,6 +17,8 @@
     "hbs": "^4.1.1",
     "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
